--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: redstone_mapper_mongo
-version: 0.1.1
+version: 0.1.1+1
 author: Luiz Mineo <luiz.mineo@gmail.com>
 description: MongoDB extension for redstone_mapper
 homepage: http://luizmineo.github.io/redstone.dart
@@ -7,7 +7,7 @@ environment:
   sdk: '>=1.4.0 <2.0.0'
 dependencies:
   redstone: '>= 0.5.5 < 0.6.0'
-  redstone_mapper: '>= 0.1.0 <0.2.0'
+  redstone_mapper: '>= 0.1.1 <0.2.0'
   connection_pool: '>=0.1.0+2 < 1.0.0'
   mongo_dart: '>= 0.1.40 <0.2.0'
 dev_dependencies:
