--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: redstone_mapper_mongo
-version: 0.1.1+1
+version: 0.1.2
 author: Luiz Mineo <luiz.mineo@gmail.com>
 description: MongoDB extension for redstone_mapper 
 homepage: http://redstonedart.org
