--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: redstone_mapper_mongo
-version: 0.1.3+1
+version: 0.2.0-beta.1
 author: Luiz Mineo <luiz.mineo@gmail.com>
 description: MongoDB extension for redstone_mapper 
 homepage: http://redstonedart.org
 environment:
-  sdk: '>=1.4.0 <2.0.0'
+  sdk: '>=1.9.0-dev.9.1 <2.0.0'
 dependencies:
-  redstone: '>=0.5.5 < 0.6.0'
-  redstone_mapper: '>=0.1.1 <0.2.0'
+  redstone: '>=0.6.0-beta.1 <0.7.0'
+  redstone_mapper: '>=0.2.0-beta.1 <0.3.0'
   connection_pool: '>=0.1.0+2 < 1.0.0'
   mongo_dart: '>= 0.1.40 <0.2.0'
 dev_dependencies:
