--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,19 @@
 name: redstone_mapper_mongo
-version: 0.2.0-beta.1
-author: Luiz Mineo <luiz.mineo@gmail.com>
-description: MongoDB extension for redstone_mapper 
+version: 0.2.0-beta.2
+author:
+- Luiz Mineo <luiz.mineo@gmail.com>
+- Joel Trottier-Hebert <iamquebecois@gmail.com>
+description: MongoDB extension for redstone_mapper
 homepage: http://redstonedart.org
 environment:
   sdk: '>=1.9.0-dev.9.1 <2.0.0'
 dependencies:
-  redstone: '>=0.6.0-beta.1 <0.7.0'
-  redstone_mapper: '>=0.2.0-beta.1 <0.3.0'
+  redstone:
+    git: https://github.com/redstone-dart/redstone.git
+  redstone_mapper:
+    git: https://github.com/redstone-dart/redstone_mapper.git
   connection_pool: '>=0.1.0+2 < 1.0.0'
-  mongo_dart: '>= 0.1.40 <0.2.0'
+  mongo_dart: 0.2.5-beta
 dev_dependencies:
-  unittest: '>=0.10.0 <0.12.0'
+  test: '^0.12.6+1'
   mock: '>=0.11.0+1 <0.12.0'
